--- a/index.html
+++ b/index.html
@@ -3,50 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Digital Ethiopia 2026</title>
+    <title>ልማት Hub | Ethiopia Digital 2026</title>
     <style>
         :root { --blue: #003973; --yellow: #FFD700; --bg: #f8f9fa; --white: #ffffff; --green: #28a745; }
-        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', Arial, sans-serif; transition: 0.3s; }
+        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', Arial, sans-serif; scroll-behavior: smooth; }
         body { background: var(--bg); color: #333; line-height: 1.6; }
 
-        /* HEADER & ANNOUNCEMENT */
-        .ticker { background: var(--yellow); color: var(--blue); padding: 12px; font-weight: bold; text-align: center; font-size: 0.9rem; position: sticky; top: 0; z-index: 2000; border-bottom: 2px solid var(--blue); }
+        .ticker { background: var(--yellow); color: var(--blue); padding: 12px; font-weight: bold; text-align: center; font-size: 0.9rem; position: sticky; top: 0; z-index: 2000; }
         nav { display: flex; justify-content: space-between; align-items: center; padding: 15px 8%; background: white; border-bottom: 1px solid #ddd; position: sticky; top: 43px; z-index: 1000; }
         .logo { font-size: 26px; font-weight: bold; color: var(--blue); text-decoration: none; }
-        .lang-select { padding: 8px 12px; border-radius: 5px; border: 1px solid #ccc; font-weight: bold; cursor: pointer; }
-        .join-btn { background: var(--yellow); color: var(--blue); padding: 10px 22px; border-radius: 50px; font-weight: bold; border: 2px solid var(--blue); text-decoration: none; box-shadow: 3px 3px 0px var(--blue); }
+        .nav-links { display: flex; gap: 20px; }
+        .nav-links a { text-decoration: none; color: var(--blue); font-weight: 600; font-size: 0.9rem; }
+        .lang-select { padding: 5px; border-radius: 5px; border: 1px solid #ccc; cursor: pointer; }
 
         .container { max-width: 1100px; margin: 0 auto; padding: 40px 5%; }
 
-        /* HERO PORTAL */
-        .hero { background: var(--blue); color: white; padding: 80px 20px; border-radius: 20px; text-align: center; border: 5px solid var(--yellow); margin-bottom: 60px; box-shadow: 0 10px 40px rgba(0,0,0,0.1); }
-        .hero h1 { font-size: 2.8rem; margin-bottom: 10px; }
-        .id-input { width: 90%; max-width: 480px; padding: 20px; margin: 25px 0; border-radius: 12px; border: none; font-size: 1.2rem; text-align: center; }
-        .v-btn { background: var(--yellow); color: var(--blue); padding: 20px 60px; border: none; border-radius: 12px; font-weight: 900; cursor: pointer; text-transform: uppercase; font-size: 1.1rem; }
-
-        .section-h { color: var(--blue); margin-bottom: 30px; border-left: 8px solid var(--yellow); padding-left: 20px; text-align: left; }
+        /* SECTIONS */
+        .hero { background: var(--blue); color: white; padding: 70px 20px; border-radius: 20px; text-align: center; border: 5px solid var(--yellow); margin-bottom: 60px; }
+        .section-h { color: var(--blue); margin: 60px 0 30px; border-left: 8px solid var(--yellow); padding-left: 20px; text-align: left; }
         
-        /* DASHBOARD & EVENTS GRID */
-        .main-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; margin-bottom: 60px; }
-        .card { background: white; padding: 30px; border-radius: 15px; border-left: 6px solid var(--blue); box-shadow: 0 5px 15px rgba(0,0,0,0.05); text-align: left; }
-        .live-tag { background: var(--green); color: white; padding: 4px 10px; border-radius: 5px; font-size: 0.75rem; font-weight: bold; margin-bottom: 10px; display: inline-block; }
-        .event-item { margin-top: 15px; padding-top: 15px; border-top: 1px solid #eee; }
+        .id-input { width: 90%; max-width: 450px; padding: 18px; margin: 20px 0; border-radius: 12px; border: none; font-size: 1.1rem; text-align: center; }
+        .v-btn { background: var(--yellow); color: var(--blue); padding: 18px 50px; border: none; border-radius: 12px; font-weight: 900; cursor: pointer; text-transform: uppercase; }
+
+        /* ABOUT & CONTACT CARDS */
+        .info-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; }
+        .card { background: white; padding: 35px; border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); text-align: left; border-bottom: 5px solid var(--blue); }
+        
+        .contact-form input, .contact-form textarea { width: 100%; padding: 12px; margin-bottom: 15px; border: 1px solid #ddd; border-radius: 8px; }
+        .send-btn { background: var(--blue); color: white; padding: 12px 25px; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; width: 100%; }
 
         /* TRACKS */
-        .tracks-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 80px; }
-        .track-box { background: white; padding: 30px 20px; border-radius: 15px; border-top: 6px solid var(--blue); border-right: 1px solid #eee; border-bottom: 1px solid #eee; }
-        .track-box:hover { border-top-color: var(--yellow); transform: translateY(-8px); }
+        .tracks-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 15px; }
+        .t-box { background: white; padding: 20px; border-radius: 10px; border-top: 4px solid var(--blue); border: 1px solid #eee; text-align: center; }
 
-        /* FAQ */
-        .faq-box { background: white; padding: 50px; border-radius: 25px; border: 1px solid #ddd; margin-bottom: 80px; text-align: left; }
-        .faq-item { margin-bottom: 30px; border-bottom: 1px solid #eee; padding-bottom: 20px; }
-
-        /* FOOTER */
-        footer { background: #0a0a0a; color: white; padding: 80px 8% 40px; border-top: 10px solid var(--yellow); }
-        .f-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 50px; text-align: left; }
-        .f-col h4 { color: var(--yellow); margin-bottom: 25px; text-transform: uppercase; font-size: 0.9rem; letter-spacing: 1px; }
-        .f-col p { color: #888; margin-bottom: 12px; font-size: 0.9rem; }
-        .f-bottom { border-top: 1px solid #222; margin-top: 50px; padding-top: 30px; text-align: center; color: #444; font-size: 0.85rem; }
+        footer { background: #0a0a0a; color: white; padding: 60px 8%; border-top: 8px solid var(--yellow); margin-top: 80px; }
     </style>
 </head>
 <body>
@@ -55,13 +45,15 @@
 
 <nav>
     <a href="#" class="logo">ልማት Hub</a>
-    <div style="display:flex; gap:20px; align-items:center;">
+    <div class="nav-links">
+        <a href="#about" id="na">About</a>
+        <a href="#tracks" id="nt">Tracks</a>
+        <a href="#contact" id="nc">Contact</a>
         <select class="lang-select" onchange="upd(this.value)">
-            <option value="en">English</option>
-            <option value="am">አማርኛ</option>
-            <option value="om">Afaan Oromoo</option>
+            <option value="en">EN</option>
+            <option value="am">አማ</option>
+            <option value="om">OR</option>
         </select>
-        <a href="#" class="join-btn" id="jb">JOIN NOW</a>
     </div>
 </nav>
 
@@ -69,98 +61,90 @@
     <div class="hero">
         <h1 id="ht">Ethiopia's 2026 Digital Mission</h1>
         <p id="hs">National ID Verification Portal</p>
-        <input type="number" class="id-input" id="id-pl" placeholder="Enter Fayda ID to access dashboard">
+        <input type="number" class="id-input" id="id-pl" placeholder="Enter Fayda ID">
         <br>
         <button class="v-btn" id="vb">VERIFY & ENTER</button>
     </div>
 
-    <div class="main-grid">
-        <div class="card">
-            <span class="live-tag">LIVE STATUS</span>
-            <b id="o1">Learning Streak</b>
-            <p id="o1s">0 Days (Verify ID to track)</p>
-            <hr style="margin:20px 0; opacity:0.1;">
-            <b id="o2">Certifications</b>
-            <p id="o2s">Locked until ID is verified</p>
-        </div>
-        <div class="card">
-            <b id="eh" style="font-size:1.2rem; color:var(--blue);">Upcoming Events</b>
-            <div class="event-item">
-                <small style="color:var(--green); font-weight:bold;">MARCH 10, 2026</small>
-                <p><b>AI Summit Addis</b> - National Science Museum</p>
-            </div>
-            <div class="event-item">
-                <small style="color:var(--green); font-weight:bold;">MARCH 22, 2026</small>
-                <p><b>Fayda Tech Workshop</b> - ICT Park</p>
-            </div>
-        </div>
+    <h2 class="section-h" id="about">About the Mission</h2>
+    <div class="card" style="border-left: 8px solid var(--yellow);">
+        <p id="abp">ልማት Hub is the central engine for Ethiopia’s Digital 2026 Strategy. Our mission is to equip 1 million citizens with world-class AI, Cyber Security, and Software Engineering skills, directly linked to the Fayda National ID system for official certification and employment placement.</p>
     </div>
 
-    <h2 class="section-h" id="th">Official Specializations (10 Tracks)</h2>
+    <h2 class="section-h" id="tracks">Official Tracks (10)</h2>
     <div class="tracks-grid" id="tl"></div>
 
-    <div class="faq-box">
-        <h2 class="section-h" id="fh">Frequently Asked Questions</h2>
-        <div id="fl"></div>
+    <h2 class="section-h" id="contact">Contact Us</h2>
+    <div class="info-grid">
+        <div class="card">
+            <h3 id="ch">Get in Touch</h3>
+            <p id="cs">Have questions about your Fayda ID or course enrollment? Send us a message.</p>
+            <form class="contact-form" style="margin-top:20px;">
+                <input type="text" id="fn" placeholder="Full Name">
+                <input type="email" id="em" placeholder="Email Address">
+                <textarea id="ms" rows="4" placeholder="How can we help?"></textarea>
+                <button type="button" class="send-btn" id="snb">Send Message</button>
+            </form>
+        </div>
+        <div class="card" style="background:var(--blue); color:white;">
+            <h3 id="ah">Headquarters</h3>
+            <p>National ICT Park</p>
+            <p>Addis Ababa, Ethiopia</p>
+            <hr style="margin:20px 0; opacity:0.3;">
+            <p>Email: support@lemathub.et</p>
+            <p>Phone: +251 900 000 000</p>
+        </div>
     </div>
 </div>
 
 <footer>
-    <div class="f-grid">
-        <div class="f-col"><h4>ልማት Hub</h4><p id="fa">Building the tech workforce of 2026.</p></div>
-        <div class="f-col"><h4 id="flk">Mission Resources</h4><p>Curriculum 2026</p><p>Fayda ID Guide</p></div>
-        <div class="f-col"><h4 id="fc">Headquarters</h4><p>Addis Ababa, Ethiopia</p><p>info@lemathub.et</p></div>
-    </div>
-    <div class="f-bottom">
-        <p>© 2026 ልማት Hub | Official Fayda National ID Partner</p>
-        <p style="margin-top:10px;">Empowering Ethiopia's Digital Transformation</p>
-    </div>
+    <p>© 2026 ልማት Hub | Official Fayda National ID Partner</p>
+    <p style="opacity:0.5; font-size:0.8rem; margin-top:10px;">Empowering Ethiopia's Digital Transformation</p>
 </footer>
 
 <script>
-    const d = {
+    const data = {
         en: {
-            tk: "MISSION 2026: ENROLLMENT OPEN • VERIFIED BY FAYDA ID", jb: "JOIN NOW",
+            tk: "MISSION 2026: ENROLLMENT OPEN • VERIFIED BY FAYDA ID",
             ht: "Ethiopia's 2026 Digital Mission", hs: "National ID Verification Portal",
-            id: "Enter Fayda ID to access dashboard", vb: "VERIFY & ENTER",
-            o1: "Learning Streak", o1s: "0 Days (Verify ID to track)", o2: "Certifications", o2s: "Locked until ID is verified",
-            eh: "Upcoming Events", th: "Official Specializations (10 Tracks)", fh: "Frequently Asked Questions", fa: "Building the tech workforce of 2026.",
-            tr: ["AI Engineering", "Cyber Security", "Full-Stack Web", "Data Science", "Cloud DevOps", "Mobile Dev", "Blockchain", "UI/UX Design", "IoT Systems", "Fintech"],
-            faq: [{q: "Is this free?", a: "Yes, fully funded for verified citizens."}, {q: "Is ID required?", a: "Yes, Fayda ID is mandatory."}]
+            id: "Enter Fayda ID", vb: "VERIFY & ENTER", na: "About", nt: "Tracks", nc: "Contact",
+            abp: "ልማት Hub is the central engine for Ethiopia’s Digital 2026 Strategy. We equip citizens with AI and Engineering skills linked to National ID certification.",
+            ch: "Get in Touch", cs: "Questions about Fayda ID or courses? Message us.",
+            fn: "Full Name", em: "Email", ms: "Message...", snb: "Send Message", ah: "Headquarters",
+            tr: ["AI Engineering", "Cyber Security", "Full-Stack Web", "Data Science", "Cloud DevOps", "Mobile Dev", "Blockchain", "UI/UX Design", "IoT Systems", "Fintech"]
         },
         am: {
-            tk: "ተልዕኮ 2026፡ ምዝገባ ተከፍቷል • በፋይዳ መታወቂያ የተረጋገጠ", jb: "አሁን ይቀላቀሉ",
+            tk: "ተልዕኮ 2026፡ ምዝገባ ተከፍቷል • በፋይዳ መታወቂያ የተረጋገጠ",
             ht: "የኢትዮጵያ 2026 ዲጂታል ተልዕኮ", hs: "የብሔራዊ መታወቂያ ማረጋገጫ ፖርታል",
-            id: "ዳሽቦርድ ለመድረስ የፋይዳ መታወቂያ ያስገቡ", vb: "አረጋግጥ እና ግባ",
-            o1: "የትምህርት ሂደት", o1s: "0 ቀናት (ለመከታተል መታወቂያ ያረጋግጡ)", o2: "የምስክር ወረቀቶች", o2s: "መታወቂያ ሲረጋገጥ ይከፈታል",
-            eh: "መጪ ክስተቶች", th: "ኦፊሴላዊ የሥልጠና ዘርፎች (10 ትራኮች)", fh: "ተደጋጋሚ ጥያቄዎች", fa: "የ2026 የቴክኖሎጂ የሰው ኃይል መገንባት።",
-            tr: ["አርቴፊሻል ኢንተለጀንስ", "የሳይበር ደህንነት", "ሙሉ የድር ልማት", "የመረጃ ሳይንስ", "ክላውድ ዴቭኦፕስ", "የሞባይል መተግበሪያ", "ብሎክቼይን", "ዩአይ/ዩኤክስ ዲዛይን", "አይኦቲ ሲስተምስ", "ፊንቴክ"],
-            faq: [{q: "ነፃ ነው?", a: "አዎ፣ ሁሉም ትራኮች በነፃ ናቸው።"}, {q: "መታወቂያ ያስፈልጋል?", a: "አዎ፣ የፋይዳ መታወቂያ ግዴታ ነው።"}]
+            id: "የፋይዳ መታወቂያ ያስገቡ", vb: "አረጋግጥ እና ግባ", na: "ስለ እኛ", nt: "ትራኮች", nc: "እውቂያ",
+            abp: "ልማት Hub ለኢትዮጵያ የ2026 ዲጂታል ስትራቴጂ ማዕከላዊ ሞተር ነው። ዜጎችን በብሔራዊ መታወቂያ የምስክር ወረቀት ከኤአይ እና ኢንጂነሪንግ ክህሎቶች ጋር እናስታጥቃለን።",
+            ch: "ያግኙን", cs: "ስለ ፋይዳ መታወቂያ ወይም ኮርሶች ጥያቄ አለዎት? ይጻፉልን።",
+            fn: "ሙሉ ስም", em: "ኢሜል", ms: "መልዕክት...", snb: "መልዕክት ላክ", ah: "ዋና መሥሪያ ቤት",
+            tr: ["አርቴፊሻል ኢንተለጀንስ", "የሳይበር ደህንነት", "ሙሉ የድር ልማት", "የመረጃ ሳይንስ", "ክላውድ ዴቭኦፕስ", "የሞባይል መተግበሪያ", "ብሎክቼይን", "ዩአይ/ዩኤክስ ዲዛይን", "አይኦቲ ሲስተምስ", "ፊንቴክ"]
         },
         om: {
-            tk: "ERGA 2026: GALMEEN BANAMEERA • FAYDA ID'N MIRKANAAYE", jb: "AMMA SEENI",
+            tk: "ERGA 2026: GALMEEN BANAMEERA • FAYDA ID'N MIRKANAAYE",
             ht: "Ergaa Diigitalaa Itoophiyaa 2026", hs: "Waraqaa Eenyummaa Mirkaneessuuf",
-            id: "Koodii Fayda galchaa", vb: "MIRKANEESSI & SEENI",
-            o1: "Adeemsa Leenjii", o1s: "Guyyaa 0 (ID Mirkaneessi)", o2: "Waraqaa Ragaa", o2s: "ID'n cufameera",
-            eh: "Sagantaawwan Dhufan", th: "Leenjiiwwan (Track 10)", fh: "Gaaffiiwwan Yeroo Baay'ee Gaafataman", fa: "Humni namaa teeknooloojii 2026 ijaaruuf.",
-            tr: ["AI Injiinariingii", "Cyber Security", "Full-Stack Web", "Data Science", "Cloud DevOps", "Mobile Dev", "Blockchain", "UI/UX Design", "IoT Systems", "Fintech"],
-            faq: [{q: "Bilisaa?", a: "Eeyyee, track hundi bilisa።"}, {q: "ID'n ni barbaachisaa?", a: "Eeyyee, Fayda ID'n dirqama።"}]
+            id: "Koodii Fayda galchaa", vb: "MIRKANEESSI & SEENI", na: "Waa'ee Keenya", nt: "Track'ota", nc: "Quunnamtii",
+            abp: "ልማት Hub moोटora giddu-galeessaa Istaatireejii Diigitalaa Itoophiyaa 2026 ti. Lammilee dandeettii AI fi Injiinariingii waraqaa eenyummaa biyyaalessaa waliin walqabatuun ni qopheessina.",
+            ch: "Nu Quunnamaa", cs: "Waa'ee Fayda ID ykn barnootaa gaaffii qabduu? Nuuf barreessaa.",
+            fn: "Maqaa Guutuu", em: "Imeelii", ms: "Ergaa...", snb: "Ergaa Ergi", ah: "Waajjira Ol'aanaa",
+            tr: ["AI Injiinariingii", "Cyber Security", "Full-Stack Web", "Data Science", "Cloud DevOps", "Mobile Dev", "Blockchain", "UI/UX Design", "IoT Systems", "Fintech"]
         }
     };
 
     function upd(l) {
-        const c = d[l];
-        document.getElementById('tk').innerText = c.tk; document.getElementById('jb').innerText = c.jb;
-        document.getElementById('ht').innerText = c.ht; document.getElementById('hs').innerText = c.hs;
-        document.getElementById('id-pl').placeholder = c.id; document.getElementById('vb').innerText = c.vb;
-        document.getElementById('o1').innerText = c.o1; document.getElementById('o1s').innerText = c.o1s;
-        document.getElementById('o2').innerText = c.o2; document.getElementById('o2s').innerText = c.o2s;
-        document.getElementById('eh').innerText = c.eh; document.getElementById('th').innerText = c.th;
-        document.getElementById('fh').innerText = c.fh; document.getElementById('fa').innerText = c.fa;
+        const c = data[l];
+        document.getElementById('tk').innerText = c.tk; document.getElementById('ht').innerText = c.ht;
+        document.getElementById('hs').innerText = c.hs; document.getElementById('id-pl').placeholder = c.id;
+        document.getElementById('vb').innerText = c.vb; document.getElementById('na').innerText = c.na;
+        document.getElementById('nt').innerText = c.nt; document.getElementById('nc').innerText = c.nc;
+        document.getElementById('abp').innerText = c.abp; document.getElementById('ch').innerText = c.ch;
+        document.getElementById('cs').innerText = c.cs; document.getElementById('fn').placeholder = c.fn;
+        document.getElementById('em').placeholder = c.em; document.getElementById('ms').placeholder = c.ms;
+        document.getElementById('snb').innerText = c.snb; document.getElementById('ah').innerText = c.ah;
         const g = document.getElementById('tl'); g.innerHTML = "";
-        c.tr.forEach(t => { g.innerHTML += `<div class="track-box"><b>${t}</b><small>Specialization</small></div>`; });
-        const fl = document.getElementById('fl'); fl.innerHTML = "";
-        c.faq.forEach(q => { fl.innerHTML += `<div class="faq-item"><h3>${q.q}</h3><p>${q.a}</p></div>`; });
+        c.tr.forEach(t => { g.innerHTML += `<div class="t-box"><b>${t}</b></div>`; });
     }
     upd('en');
 </script>
